--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-# OCR stack (exact versions)
+# OCR stack (LOCKED versions)
 paddlepaddle==2.6.2
 paddleocr==2.7.0.3
 numpy==1.26.4
@@ -10,4 +10,5 @@ torch==2.4.0
 transformers==4.39.3
 accelerate==0.26.1
 sentencepiece==0.1.99
+huggingface_hub==0.20.3
 runpod==1.6.2
